--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/travis-cli": "^8.2.0",
     "@stryker-mutator/core": "^2.1.0",
     "@stryker-mutator/html-reporter": "^2.1.0",
     "@stryker-mutator/jest-runner": "^2.1.0",
