--- a/package.json
+++ b/package.json
@@ -12,40 +12,41 @@
     "build": "rollup -c",
     "test": "jest && stryker run",
     "test:jest": "jest",
-    "test:stryker": "stryker run"
+    "test:stryker": "stryker run",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-conventional": "9.1.2",
-    "@commitlint/travis-cli": "9.1.2",
-    "@semantic-release/github": "7.0.7",
-    "@semantic-release/npm": "7.0.5",
-    "@stryker-mutator/core": "3.3.1",
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
+    "@commitlint/travis-cli": "12.1.4",
+    "@semantic-release/github": "7.2.3",
+    "@semantic-release/npm": "7.1.3",
+    "@stryker-mutator/core": "5.0.1",
     "@stryker-mutator/html-reporter": "3.1.0",
-    "@stryker-mutator/jest-runner": "3.3.1",
-    "@stryker-mutator/typescript": "3.3.1",
+    "@stryker-mutator/jest-runner": "5.0.1",
+    "@stryker-mutator/typescript": "4.0.0",
     "@types/jest": "26.0.23",
-    "@typescript-eslint/eslint-plugin": "3.9.0",
-    "@typescript-eslint/parser": "3.9.0",
-    "codecov": "3.7.2",
+    "@typescript-eslint/eslint-plugin": "4.25.0",
+    "@typescript-eslint/parser": "4.25.0",
+    "codecov": "3.8.2",
     "commitizen": "4.2.4",
-    "cz-conventional-changelog": "3.2.0",
-    "eslint": "7.6.0",
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "husky": "4.2.5",
-    "jest": "26.3.0",
-    "jest-mock-axios": "4.2.1",
-    "lint-staged": "10.2.11",
-    "prettier": "2.0.5",
-    "rollup": "2.23.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.27.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "husky": "^6.0.0",
+    "jest": "27.0.1",
+    "jest-mock-axios": "4.4.0",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.0",
+    "rollup": "2.50.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "rollup-plugin-typescript2": "0.27.2",
-    "semantic-release": "17.2.3",
-    "ts-jest": "26.2.0",
-    "typescript": "3.9.7"
+    "rollup-plugin-typescript2": "0.30.0",
+    "semantic-release": "17.4.3",
+    "ts-jest": "27.0.1",
+    "typescript": "4.3.2"
   },
   "dependencies": {
     "axios": "^0.21.1"
